[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scripts/Node2D.gd" type="Script" id=1]

[sub_resource type="Curve" id=1]
min_value = -200.0
max_value = 400.0
_data = [ Vector2( 0, 400 ), 0.0, -3031.75, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 40.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 50.0
linear_accel_random = 0.2
linear_accel_curve = SubResource( 2 )
color = Color( 0.917647, 0, 0, 1 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.8 )
colors = PoolColorArray( 0.59082, 0, 1, 1, 0.0509766, 0, 0.339844, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
min_value = -200.0
max_value = 400.0
_data = [ Vector2( 0.00632912, 397.955 ), 0.0, 3878.18, 0, 0, Vector2( 0.183544, 152.5 ), -2693.18, -2693.18, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 40.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 50.0
linear_accel_random = 0.2
linear_accel_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[sub_resource type="Curve" id=9]
min_value = -200.0
max_value = 400.0
_data = [ Vector2( 0, 400 ), 0.0, 2824.85, 0, 0, Vector2( 0.139241, 59.0909 ), -1675.76, -1675.76, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 40.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 50.0
linear_accel_random = 0.2
linear_accel_curve = SubResource( 10 )
color = Color( 1, 0.756863, 0.0352941, 1 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.815686, 0.00392157, 0.14902, 1 )

[sub_resource type="Gradient" id=13]
colors = PoolColorArray( 1, 0.679688, 0, 1, 0.980469, 0.29782, 0.0268097, 1 )

[sub_resource type="GradientTexture" id=14]
gradient = SubResource( 13 )

[sub_resource type="Curve" id=15]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0.0379747, 200 ), 0.0, 0.0, 0, 0, Vector2( 0.993671, 141.364 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=17]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 20.0
linear_accel_random = 0.5
linear_accel_curve = SubResource( 16 )
scale = 2.0
scale_random = 0.5
color_ramp = SubResource( 14 )

[sub_resource type="Gradient" id=18]
colors = PoolColorArray( 0.570312, 1, 0, 1, 0.984375, 0.399151, 0.0115356, 1 )

[sub_resource type="GradientTexture" id=19]
gradient = SubResource( 18 )

[sub_resource type="Curve" id=20]
min_value = -200.1
max_value = 400.0
_data = [ Vector2( 0, 383.636 ), 0.0, -1199.05, 0, 0, Vector2( 0.962025, -161.912 ), 235.08, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=21]
curve = SubResource( 20 )

[sub_resource type="ParticlesMaterial" id=22]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 40.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 50.0
linear_accel_random = 0.2
linear_accel_curve = SubResource( 21 )
color_ramp = SubResource( 19 )

[sub_resource type="Gradient" id=23]
offsets = PoolRealArray( 0, 0.859259 )
colors = PoolColorArray( 0.980469, 0.0454209, 0.0229797, 1, 0.0445557, 0.570312, 0, 1 )

[sub_resource type="GradientTexture" id=24]
gradient = SubResource( 23 )

[sub_resource type="Curve" id=25]
min_value = -200.0
max_value = 400.0
_data = [ Vector2( 0, 400 ), 0.0, -2200.71, 0, 0, Vector2( 0.981013, -89.5454 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=26]
curve = SubResource( 25 )

[sub_resource type="ParticlesMaterial" id=27]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 40.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 40.0
linear_accel_random = 0.2
linear_accel_curve = SubResource( 26 )
color_ramp = SubResource( 24 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="NormApple" type="Particles2D" parent="."]
emitting = false
amount = 200
lifetime = 0.5
one_shot = true
explosiveness = 0.5
process_material = SubResource( 3 )

[node name="PoisApple" type="Particles2D" parent="."]
position = Vector2( 75.2202, 67.1 )
emitting = false
amount = 200
lifetime = 0.5
one_shot = true
explosiveness = 0.5
process_material = SubResource( 8 )

[node name="GoldApple" type="Particles2D" parent="."]
emitting = false
amount = 200
lifetime = 0.5
one_shot = true
explosiveness = 0.5
process_material = SubResource( 11 )

[node name="Heart" type="Particles2D" parent="."]
emitting = false
amount = 200
lifetime = 0.5
one_shot = true
explosiveness = 0.5
process_material = SubResource( 12 )

[node name="Bomb" type="Particles2D" parent="."]
emitting = false
amount = 600
lifetime = 0.5
one_shot = true
explosiveness = 0.5
randomness = 0.5
process_material = SubResource( 17 )

[node name="Mango" type="Particles2D" parent="."]
modulate = Color( 0.945098, 1, 0, 1 )
emitting = false
amount = 200
lifetime = 0.5
one_shot = true
explosiveness = 0.5
process_material = SubResource( 22 )

[node name="Melon" type="Particles2D" parent="."]
emitting = false
amount = 200
lifetime = 0.5
one_shot = true
explosiveness = 0.5
process_material = SubResource( 27 )
